# architecture

./: .gitignore  Makefile  README.md  pelicanconf.py  publishconf.py  pyproject.toml
assets/js/: mermaid.js
content/2025/: slowly-apis-integrations.md
issues/: 01 - Slowly APIs integrations.md  01-slowly-apis-integrations.md
