[project]
name = "architecture"
version = "0.1.0"
description = "Some architecture challenges that I got and solutions proposed by me"
authors = [
    {name = "João Paulo Carvalho", email = "jjpaulo2@protonmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pelican[markdown] (>=4.11.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
